--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
     <meta
       name="description"
-      content="Sou um apaixonado desenvolvedor front-end com expertise em HTML5, CSS3, JavaScript e frameworks modernos como Angular. Explore minha lista de tarefas e veja este meu projeto envolvente e responsivos."
+      content="Sou um desenvolvedor inciante no front-end, Css, JavaScript e HTML. Explore minha lista de tarefas e veja este meu projeto envolvente e responsivos."
     />
 
     <link
